wsdb/parser/pmysql.output
Терминалы не используются в грамматике

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASE
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DISTINCT
   DISTINCTROW
   DIV
   DUAL
   EACH
   ELSEIF
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   IF
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SQL_BIG_RESULT
   SQL_CALC_FOUND_ROWS
   SQL_SMALL_RESULT
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE
   ESCAPED


Состояние 68 конфликты: 1 сдвига/вывода


Грамматика

    0 $accept: query $end

    1 query: %empty
    2      | stmt ';'
    3      | EXIT

    4 expr: NAME
    5     | NAME '.' NAME
    6     | USERVAR
    7     | STRING
    8     | INTNUM
    9     | APPROXNUM
   10     | BOOL
   11     | expr '+' expr
   12     | expr '-' expr
   13     | expr '*' expr
   14     | expr '/' expr
   15     | expr '%' expr
   16     | expr MOD expr
   17     | '-' expr
   18     | expr ANDOP expr
   19     | expr OR expr
   20     | expr XOR expr
   21     | expr '|' expr
   22     | expr '&' expr
   23     | expr '^' expr
   24     | expr SHIFT expr
   25     | NOT expr
   26     | '!' expr
   27     | expr COMPARISON expr
   28     | expr COMPARISON '(' select_stmt ')'
   29     | expr COMPARISON ANY '(' select_stmt ')'
   30     | expr COMPARISON SOME '(' select_stmt ')'
   31     | expr COMPARISON ALL '(' select_stmt ')'
   32     | expr IS NULLX
   33     | expr IS NOT NULLX
   34     | expr IS BOOL
   35     | expr IS NOT BOOL
   36     | USERVAR ASSIGN expr
   37     | expr BETWEEN expr AND expr

   38 val_list: expr
   39         | expr ',' val_list

   40 opt_val_list: %empty
   41             | val_list

   42 expr: expr IN '(' val_list ')'
   43     | expr NOT IN '(' val_list ')'
   44     | expr IN '(' select_stmt ')'
   45     | expr NOT IN '(' select_stmt ')'
   46     | EXISTS '(' select_stmt ')'
   47     | NAME '(' opt_val_list ')'
   48     | FCOUNT '(' '*' ')'
   49     | FCOUNT '(' expr ')'
   50     | FSUBSTRING '(' val_list ')'
   51     | FSUBSTRING '(' expr FROM expr ')'
   52     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   53     | FTRIM '(' val_list ')'
   54     | FTRIM '(' trim_ltb expr FROM val_list ')'

   55 trim_ltb: LEADING
   56         | TRAILING
   57         | BOTH

   58 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   59     | FDATE_SUB '(' expr ',' interval_exp ')'

   60 interval_exp: INTERVAL expr DAY_HOUR
   61             | INTERVAL expr DAY_MICROSECOND
   62             | INTERVAL expr DAY_MINUTE
   63             | INTERVAL expr DAY_SECOND
   64             | INTERVAL expr YEAR_MONTH
   65             | INTERVAL expr YEAR
   66             | INTERVAL expr HOUR_MICROSECOND
   67             | INTERVAL expr HOUR_MINUTE
   68             | INTERVAL expr HOUR_SECOND

   69 expr: CASE expr case_list END
   70     | CASE expr case_list ELSE expr END
   71     | CASE case_list END
   72     | CASE case_list ELSE expr END

   73 case_list: WHEN expr THEN expr
   74          | case_list WHEN expr THEN expr

   75 expr: expr LIKE expr
   76     | expr NOT LIKE expr
   77     | expr REGEXP expr
   78     | expr NOT REGEXP expr
   79     | CURRENT_TIMESTAMP
   80     | CURRENT_DATE
   81     | CURRENT_TIME
   82     | BINARY expr

   83 stmt: select_stmt

   84 select_stmt: SELECT select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   85 opt_where: %empty
   86          | WHERE expr

   87 opt_groupby: %empty
   88            | GROUP BY groupby_list opt_with_rollup

   89 groupby_list: expr opt_asc_desc
   90             | groupby_list ',' expr opt_asc_desc

   91 opt_asc_desc: %empty
   92             | ASC
   93             | DESC

   94 opt_if_not_exists: %empty

   95 opt_with_rollup: %empty
   96                | WITH ROLLUP

   97 opt_having: %empty
   98           | HAVING expr

   99 opt_orderby: %empty
  100            | ORDER BY groupby_list

  101 opt_limit: %empty
  102          | LIMIT expr
  103          | LIMIT expr ',' expr

  104 opt_into: %empty
  105         | INTO

  106 opt_into_list: %empty
  107              | INTO column_list

  108 column_list: NAME
  109            | column_list ',' NAME

  110 select_expr_list: select_expr
  111                 | select_expr_list ',' select_expr
  112                 | '*'

  113 select_expr: expr opt_as_alias

  114 opt_as_alias: AS NAME
  115             | NAME
  116             | %empty

  117 table_references: table_reference
  118                 | table_references ',' table_reference

  119 table_reference: table_factor
  120                | join_table

  121 table_factor: NAME opt_as_alias index_hint
  122             | NAME '.' NAME opt_as_alias index_hint
  123             | table_subquery opt_as NAME
  124             | '(' table_references ')'

  125 opt_as: AS
  126       | %empty

  127 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  128           | table_reference STRAIGHT_JOIN table_factor
  129           | table_reference STRAIGHT_JOIN table_factor ON expr
  130           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  131           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  132 opt_inner_cross: %empty
  133                | INNER
  134                | CROSS

  135 opt_outer: %empty
  136          | OUTER

  137 left_or_right: LEFT
  138              | RIGHT

  139 opt_left_or_right_outer: LEFT opt_outer
  140                        | RIGHT opt_outer
  141                        | %empty

  142 opt_join_condition: %empty
  143                   | join_condition

  144 join_condition: ON expr
  145               | USING '(' column_list ')'

  146 index_hint: USE KEY opt_for_join '(' index_list ')'
  147           | IGNORE KEY opt_for_join '(' index_list ')'
  148           | FORCE KEY opt_for_join '(' index_list ')'
  149           | %empty

  150 opt_for_join: FOR JOIN
  151             | %empty

  152 index_list: NAME
  153           | index_list ',' NAME

  154 table_subquery: '(' select_stmt ')'

  155 stmt: delete_stmt

  156 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  157 delete_opts: delete_opts LOW_PRIORITY
  158            | delete_opts QUICK
  159            | delete_opts IGNORE
  160            | %empty

  161 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  162 delete_list: NAME opt_dot_star
  163            | delete_list ',' NAME opt_dot_star

  164 opt_dot_star: %empty
  165             | '.' '*'

  166 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  167 stmt: insert_stmt

  168 insert_stmt: INSERT insert_opts INTO NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  169 opt_ondupupdate: %empty
  170                | ONDUPLICATE KEY UPDATE insert_asgn_list

  171 insert_opts: %empty
  172            | insert_opts LOW_PRIORITY
  173            | insert_opts DELAYED
  174            | insert_opts HIGH_PRIORITY
  175            | insert_opts IGNORE

  176 opt_col_names: %empty
  177              | '(' column_list ')'

  178 insert_vals_list: '(' insert_vals ')'
  179                 | insert_vals_list ',' '(' insert_vals ')'

  180 insert_vals: expr
  181            | DEFAULT
  182            | insert_vals ',' expr
  183            | insert_vals ',' DEFAULT

  184 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  185 insert_asgn_list: NAME COMPARISON expr
  186                 | NAME COMPARISON DEFAULT
  187                 | insert_asgn_list ',' NAME COMPARISON expr
  188                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  189 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  190 stmt: replace_stmt

  191 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  192             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  193             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  194 stmt: update_stmt

  195 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  196 update_opts: %empty
  197            | insert_opts LOW_PRIORITY
  198            | insert_opts IGNORE

  199 update_asgn_list: NAME COMPARISON expr
  200                 | NAME '.' NAME COMPARISON expr
  201                 | update_asgn_list ',' NAME COMPARISON expr
  202                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  203 stmt: drop_table_stmt

  204 drop_table_stmt: DROP TABLE NAME

  205 stmt: create_table_stmt

  206 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  207                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  208                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  209                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  210                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  211                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  212 opt_temporary: %empty
  213              | TEMPORARY

  214 create_col_list: create_definition
  215                | create_col_list ',' create_definition

  216 create_definition: PRIMARY KEY '(' column_list ')'
  217                  | KEY '(' column_list ')'
  218                  | INDEX '(' column_list ')'
  219                  | FULLTEXT INDEX '(' column_list ')'
  220                  | FULLTEXT KEY '(' column_list ')'
  221                  | NAME data_type column_atts

  222 column_atts: %empty
  223            | column_atts NOT NULLX
  224            | column_atts NULLX
  225            | column_atts DEFAULT STRING
  226            | column_atts DEFAULT INTNUM
  227            | column_atts DEFAULT APPROXNUM
  228            | column_atts DEFAULT BOOL
  229            | column_atts AUTO_INCREMENT
  230            | column_atts UNIQUE '(' column_list ')'
  231            | column_atts UNIQUE KEY
  232            | column_atts PRIMARY KEY
  233            | column_atts KEY
  234            | column_atts COMMENT STRING

  235 opt_length: %empty
  236           | '(' INTNUM ')'
  237           | '(' INTNUM ',' INTNUM ')'

  238 opt_binary: %empty
  239           | BINARY

  240 opt_uz: %empty
  241       | opt_uz UNSIGNED
  242       | opt_uz ZEROFILL

  243 opt_csc: %empty
  244        | opt_csc CHAR SET STRING
  245        | opt_csc COLLATE STRING

  246 data_type: BIT opt_length
  247          | TINYINT opt_length opt_uz
  248          | SMALLINT opt_length opt_uz
  249          | MEDIUMINT opt_length opt_uz
  250          | INT opt_length opt_uz
  251          | INTEGER opt_length opt_uz
  252          | BIGINT opt_length opt_uz
  253          | REAL opt_length opt_uz
  254          | DOUBLE opt_length opt_uz
  255          | FLOAT opt_length opt_uz
  256          | DECIMAL opt_length opt_uz
  257          | DATE
  258          | TIME
  259          | TIMESTAMP
  260          | DATETIME
  261          | YEAR
  262          | CHAR opt_length opt_csc
  263          | VARCHAR '(' INTNUM ')' opt_csc
  264          | BINARY opt_length
  265          | VARBINARY '(' INTNUM ')'
  266          | TINYBLOB
  267          | BLOB
  268          | MEDIUMBLOB
  269          | LONGBLOB
  270          | TINYTEXT opt_binary opt_csc
  271          | TEXT opt_binary opt_csc
  272          | MEDIUMTEXT opt_binary opt_csc
  273          | LONGTEXT opt_binary opt_csc
  274          | ENUM '(' enum_list ')' opt_csc
  275          | SET '(' enum_list ')' opt_csc

  276 enum_list: STRING
  277          | enum_list ',' STRING

  278 create_select_statement: opt_ignore_replace opt_as select_stmt

  279 opt_ignore_replace: %empty
  280                   | IGNORE
  281                   | REPLACE

  282 stmt: set_stmt

  283 set_stmt: SET set_list

  284 set_list: set_expr
  285         | set_list ',' set_expr

  286 set_expr: USERVAR COMPARISON expr
  287         | USERVAR ASSIGN expr


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'!' (33) 26
'%' (37) 15
'&' (38) 22
'(' (40) 28 29 30 31 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59 124
    145 146 147 148 154 177 178 179 206 207 208 210 216 217 218 219
    220 230 236 237 263 265 274 275
')' (41) 28 29 30 31 42 43 44 45 46 47 48 49 50 51 52 53 54 58 59 124
    145 146 147 148 154 177 178 179 206 207 208 210 216 217 218 219
    220 230 236 237 263 265 274 275
'*' (42) 13 48 112 165
'+' (43) 11
',' (44) 39 58 59 90 103 109 111 118 153 163 179 182 183 187 188 201
    202 215 237 277 285
'-' (45) 12 17
'.' (46) 5 122 165 200 202 207 210 211
'/' (47) 14
';' (59) 2
'^' (94) 23
'|' (124) 21
error (256)
NAME (258) 4 5 47 108 109 114 115 121 122 123 152 153 156 162 163 168
    184 185 186 187 188 189 191 192 193 199 200 201 202 204 206 207
    208 209 210 211 221
STRING (259) 7 225 234 244 245 276 277
INTNUM (260) 8 226 236 237 263 265
BOOL (261) 10 34 35 228
APPROXNUM (262) 9 227
USERVAR (263) 6 36 286 287
ASSIGN (264) 36 287
OR (265) 19
XOR (266) 20
ANDOP (267) 18
IN (268) 42 43 44 45
IS (269) 32 33 34 35
LIKE (270) 75 76
REGEXP (271) 77 78
NOT (272) 25 33 35 43 45 76 78 223
BETWEEN (273) 37
COMPARISON (274) 27 28 29 30 31 185 186 187 188 199 200 201 202 286
SHIFT (275) 24
MOD (276) 16
UMINUS (277)
EXIT (278) 3
ADD (279)
ALL (280) 31
ALTER (281)
ANALYZE (282)
AND (283) 37
ANY (284) 29
AS (285) 114 125
ASC (286) 92
AUTO_INCREMENT (287) 229
BEFORE (288)
BIGINT (289) 252
BINARY (290) 82 239 264
BIT (291) 246
BLOB (292) 267
BOTH (293) 57
BY (294) 88 100
CALL (295)
CASCADE (296)
CASE (297) 69 70 71 72
CHANGE (298)
CHAR (299) 244 262
CHECK (300)
COLLATE (301) 245
COLUMN (302)
COMMENT (303) 234
CONDITION (304)
CONSTRAINT (305)
CONTINUE (306)
CONVERT (307)
CREATE (308) 206 207 208 209 210 211
CROSS (309) 134
CURRENT_DATE (310) 80
CURRENT_TIME (311) 81
CURRENT_TIMESTAMP (312) 79
CURRENT_USER (313)
CURSOR (314)
DATABASE (315)
DATABASES (316)
DATE (317) 257
DATETIME (318) 260
DAY_HOUR (319) 60
DAY_MICROSECOND (320) 61
DAY_MINUTE (321) 62
DAY_SECOND (322) 63
DECIMAL (323) 256
DECLARE (324)
DEFAULT (325) 181 183 186 188 225 226 227 228
DELAYED (326) 173
DELETE (327) 156 161 166
DESC (328) 93
DESCRIBE (329)
DETERMINISTIC (330)
DISTINCT (331)
DISTINCTROW (332)
DIV (333)
DOUBLE (334) 254
DROP (335) 204
DUAL (336)
EACH (337)
ELSE (338) 70 72
ELSEIF (339)
END (340) 69 70 71 72
ENUM (341) 274
EXPLAIN (342)
FETCH (343)
FLOAT (344) 255
FOR (345) 52 150
FORCE (346) 148
FOREIGN (347)
FROM (348) 51 52 54 84 156 161 166
FULLTEXT (349) 219 220
GRANT (350)
GROUP (351) 88
HAVING (352) 98
HIGH_PRIORITY (353) 174
HOUR_MICROSECOND (354) 66
HOUR_MINUTE (355) 67
HOUR_SECOND (356) 68
IF (357)
IGNORE (358) 147 159 175 198 280
INFILE (359)
INDEX (360) 218 219
INNER (361) 133
INOUT (362)
INSENSITIVE (363)
INSERT (364) 168 184 189
INT (365) 250
INTEGER (366) 251
INTERVAL (367) 60 61 62 63 64 65 66 67 68
INTO (368) 105 107 168
ITERATE (369)
JOIN (370) 127 130 131 150
KEY (371) 146 147 148 170 216 217 220 231 232 233
KEYS (372)
KILL (373)
LEADING (374) 55
LEAVE (375)
LEFT (376) 137 139
LIMIT (377) 102 103
LINES (378)
LOAD (379)
LOCALTIME (380)
LOCALTIMESTAMP (381)
LOCK (382)
LONG (383)
LONGBLOB (384) 269
LONGTEXT (385) 273
LOOP (386)
LOW_PRIORITY (387) 157 172 197
MATCH (388)
MEDIUMBLOB (389) 268
MEDIUMINT (390) 249
MEDIUMTEXT (391) 272
MINUTE_MICROSECOND (392)
MINUTE_SECOND (393)
MODIFIES (394)
NATURAL (395) 131
NO_WRITE_TO_BINLOG (396)
NULLX (397) 32 33 223 224
NUMBER (398)
ON (399) 129 144
ONDUPLICATE (400) 170
OPTIMIZE (401)
OPTION (402)
OPTIONALLY (403)
ORDER (404) 100
OUT (405)
OUTER (406) 136
OUTFILE (407)
PRECISION (408)
PRIMARY (409) 216 232
PROCEDURE (410)
PURGE (411)
QUICK (412) 158
READ (413)
READS (414)
REAL (415) 253
REFERENCES (416)
RELEASE (417)
RENAME (418)
REPEAT (419)
REPLACE (420) 191 192 193 281
REQUIRE (421)
RESTRICT (422)
RETURN (423)
REVOKE (424)
RIGHT (425) 138 140
ROLLUP (426) 96
SECOND_MICROSECOND (427)
SELECT (428) 84
SENSITIVE (429)
SEPARATOR (430)
SET (431) 184 192 195 244 275 283
SHOW (432)
SMALLINT (433) 248
SOME (434) 30
SONAME (435)
SPATIAL (436)
SPECIFIC (437)
SQL (438)
SQLEXCEPTION (439)
SQLSTATE (440)
SQLWARNING (441)
SQL_BIG_RESULT (442)
SQL_CALC_FOUND_ROWS (443)
SQL_SMALL_RESULT (444)
SSL (445)
STARTING (446)
STRAIGHT_JOIN (447) 128 129
TABLE (448) 204 206 207 208 209 210 211
TEMPORARY (449) 213
TERMINATED (450)
TEXT (451) 271
THEN (452) 73 74
TIME (453) 258
TIMESTAMP (454) 259
TINYBLOB (455) 266
TINYINT (456) 247
TINYTEXT (457) 270
TO (458)
TRAILING (459) 56
TRIGGER (460)
UNDO (461)
UNION (462)
UNIQUE (463) 230 231
UNLOCK (464)
UNSIGNED (465) 241
UPDATE (466) 170 195
USAGE (467)
USE (468) 146
USING (469) 145 166
UTC_DATE (470)
UTC_TIME (471)
UTC_TIMESTAMP (472)
VALUES (473) 168 191
VARBINARY (474) 265
VARCHAR (475) 263
VARYING (476)
WHEN (477) 73 74
WHERE (478) 86
WHILE (479)
WITH (480) 96
WRITE (481)
YEAR (482) 65 261
YEAR_MONTH (483) 64
ZEROFILL (484) 242
ESCAPED (485)
EXISTS (486) 46
FSUBSTRING (487) 50 51 52
FTRIM (488) 53 54
FDATE_ADD (489) 58
FDATE_SUB (490) 59
FCOUNT (491) 48 49


Нетерминальные символы с правилами, в которых они появляются

$accept (251)
    налево: 0
query (252)
    налево: 1 2 3, направо: 0
expr (253)
    налево: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 42 43 44 45 46 47
    48 49 50 51 52 53 54 58 59 69 70 71 72 75 76 77 78 79 80 81 82,
    направо: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 42 43 44 45 49 51 52 54
    58 59 60 61 62 63 64 65 66 67 68 69 70 72 73 74 75 76 77 78 82
    86 89 90 98 102 103 113 129 144 180 182 185 187 199 200 201 202
    286 287
val_list (254)
    налево: 38 39, направо: 39 41 42 43 50 53 54
opt_val_list (255)
    налево: 40 41, направо: 47
trim_ltb (256)
    налево: 55 56 57, направо: 54
interval_exp (257)
    налево: 60 61 62 63 64 65 66 67 68, направо: 58 59
case_list (258)
    налево: 73 74, направо: 69 70 71 72 74
stmt (259)
    налево: 83 155 167 190 194 203 205 282, направо: 2
select_stmt (260)
    налево: 84, направо: 28 29 30 31 44 45 46 83 154 189
    193 278
opt_where (261)
    налево: 85 86, направо: 84 156 161 166 195
opt_groupby (262)
    налево: 87 88, направо: 84
groupby_list (263)
    налево: 89 90, направо: 88 90 100
opt_asc_desc (264)
    налево: 91 92 93, направо: 89 90
opt_if_not_exists (265)
    налево: 94, направо: 206 207 208 209 210 211
opt_with_rollup (266)
    налево: 95 96, направо: 88
opt_having (267)
    налево: 97 98, направо: 84
opt_orderby (268)
    налево: 99 100, направо: 84 156 195
opt_limit (269)
    налево: 101 102 103, направо: 84 156 195
opt_into (270)
    налево: 104 105, направо: 184 189 191 192 193
opt_into_list (271)
    налево: 106 107, направо: 84
column_list (272)
    налево: 108 109, направо: 107 109 145 177 216 217
    218 219 220 230
select_expr_list (273)
    налево: 110 111 112, направо: 84 111
select_expr (274)
    налево: 113, направо: 110 111
opt_as_alias (275)
    налево: 114 115 116, направо: 113 121 122
table_references (276)
    налево: 117 118, направо: 84 118 124 161 166 195
table_reference (277)
    налево: 119 120, направо: 117 118 127 128 129 130
    131
table_factor (278)
    налево: 121 122 123 124, направо: 119 127 128 129
    130 131
opt_as (279)
    налево: 125 126, направо: 123 278
join_table (280)
    налево: 127 128 129 130 131, направо: 120
opt_inner_cross (281)
    налево: 132 133 134, направо: 127
opt_outer (282)
    налево: 135 136, направо: 130 139 140
left_or_right (283)
    налево: 137 138, направо: 130
opt_left_or_right_outer (284)
    налево: 139 140 141, направо: 131
opt_join_condition (285)
    налево: 142 143, направо: 127
join_condition (286)
    налево: 144 145, направо: 130 143
index_hint (287)
    налево: 146 147 148 149, направо: 121 122
opt_for_join (288)
    налево: 150 151, направо: 146 147 148
index_list (289)
    налево: 152 153, направо: 146 147 148 153
table_subquery (290)
    налево: 154, направо: 123
delete_stmt (291)
    налево: 156 161 166, направо: 155
delete_opts (292)
    налево: 157 158 159 160, направо: 156 157 158 159
    161 166
delete_list (293)
    налево: 162 163, направо: 161 163 166
opt_dot_star (294)
    налево: 164 165, направо: 162 163
insert_stmt (295)
    налево: 168 184 189, направо: 167
opt_ondupupdate (296)
    налево: 169 170, направо: 168 184 189 191 192 193
insert_opts (297)
    налево: 171 172 173 174 175, направо: 168 172 173
    174 175 184 189 191 192 193 197 198
opt_col_names (298)
    налево: 176 177, направо: 168 189 191 193
insert_vals_list (299)
    налево: 178 179, направо: 168 179 191
insert_vals (300)
    налево: 180 181 182 183, направо: 178 179 182 183
insert_asgn_list (301)
    налево: 185 186 187 188, направо: 170 184 187 188
    192
replace_stmt (302)
    налево: 191 192 193, направо: 190
update_stmt (303)
    налево: 195, направо: 194
update_opts (304)
    налево: 196 197 198, направо: 195
update_asgn_list (305)
    налево: 199 200 201 202, направо: 195 201 202
drop_table_stmt (306)
    налево: 204, направо: 203
create_table_stmt (307)
    налево: 206 207 208 209 210 211, направо: 205
opt_temporary (308)
    налево: 212 213, направо: 206 207 208 209 210 211
create_col_list (309)
    налево: 214 215, направо: 206 207 208 210 215
create_definition (310)
    налево: 216 217 218 219 220 221, направо: 214 215
column_atts (311)
    налево: 222 223 224 225 226 227 228 229 230 231 232 233 234,
    направо: 221 223 224 225 226 227 228 229 230 231 232 233
    234
opt_length (312)
    налево: 235 236 237, направо: 246 247 248 249 250
    251 252 253 254 255 256 262 264
opt_binary (313)
    налево: 238 239, направо: 270 271 272 273
opt_uz (314)
    налево: 240 241 242, направо: 241 242 247 248 249
    250 251 252 253 254 255 256
opt_csc (315)
    налево: 243 244 245, направо: 244 245 262 263 270
    271 272 273 274 275
data_type (316)
    налево: 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    275, направо: 221
enum_list (317)
    налево: 276 277, направо: 274 275 277
create_select_statement (318)
    налево: 278, направо: 208 209 210 211
opt_ignore_replace (319)
    налево: 279 280 281, направо: 278
set_stmt (320)
    налево: 283, направо: 282
set_list (321)
    налево: 284 285, направо: 283 285
set_expr (322)
    налево: 286 287, направо: 284 285


State 0

    0 $accept: . query $end

    EXIT     сдвиг, и переход в состояние 1
    CREATE   сдвиг, и переход в состояние 2
    DELETE   сдвиг, и переход в состояние 3
    DROP     сдвиг, и переход в состояние 4
    INSERT   сдвиг, и переход в состояние 5
    REPLACE  сдвиг, и переход в состояние 6
    SELECT   сдвиг, и переход в состояние 7
    SET      сдвиг, и переход в состояние 8
    UPDATE   сдвиг, и переход в состояние 9

    $default  вывод с использованием правила 1 (query)

    query              переход в состояние 10
    stmt               переход в состояние 11
    select_stmt        переход в состояние 12
    delete_stmt        переход в состояние 13
    insert_stmt        переход в состояние 14
    replace_stmt       переход в состояние 15
    update_stmt        переход в состояние 16
    drop_table_stmt    переход в состояние 17
    create_table_stmt  переход в состояние 18
    set_stmt           переход в состояние 19


State 1

    3 query: EXIT .

    $default  вывод с использованием правила 3 (query)


State 2

  206 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  207                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  208                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  209                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  210                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  211                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    TEMPORARY  сдвиг, и переход в состояние 20

    $default  вывод с использованием правила 212 (opt_temporary)

    opt_temporary  переход в состояние 21


State 3

  156 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
  161            | DELETE . delete_opts delete_list FROM table_references opt_where
  166            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  вывод с использованием правила 160 (delete_opts)

    delete_opts  переход в состояние 22


State 4

  204 drop_table_stmt: DROP . TABLE NAME

    TABLE  сдвиг, и переход в состояние 23


State 5

  168 insert_stmt: INSERT . insert_opts INTO NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  184            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  189            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  вывод с использованием правила 171 (insert_opts)

    insert_opts  переход в состояние 24


State 6

  191 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  192             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  193             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  вывод с использованием правила 171 (insert_opts)

    insert_opts  переход в состояние 25


State 7

   84 select_stmt: SELECT . select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    NAME               сдвиг, и переход в состояние 26
    STRING             сдвиг, и переход в состояние 27
    INTNUM             сдвиг, и переход в состояние 28
    BOOL               сдвиг, и переход в состояние 29
    APPROXNUM          сдвиг, и переход в состояние 30
    USERVAR            сдвиг, и переход в состояние 31
    NOT                сдвиг, и переход в состояние 32
    '!'                сдвиг, и переход в состояние 33
    '-'                сдвиг, и переход в состояние 34
    '*'                сдвиг, и переход в состояние 35
    BINARY             сдвиг, и переход в состояние 36
    CASE               сдвиг, и переход в состояние 37
    CURRENT_DATE       сдвиг, и переход в состояние 38
    CURRENT_TIME       сдвиг, и переход в состояние 39
    CURRENT_TIMESTAMP  сдвиг, и переход в состояние 40
    EXISTS             сдвиг, и переход в состояние 41
    FSUBSTRING         сдвиг, и переход в состояние 42
    FTRIM              сдвиг, и переход в состояние 43
    FDATE_ADD          сдвиг, и переход в состояние 44
    FDATE_SUB          сдвиг, и переход в состояние 45
    FCOUNT             сдвиг, и переход в состояние 46

    expr              переход в состояние 47
    select_expr_list  переход в состояние 48
    select_expr       переход в состояние 49


State 8

  283 set_stmt: SET . set_list

    USERVAR  сдвиг, и переход в состояние 50

    set_list  переход в состояние 51
    set_expr  переход в состояние 52


State 9

  195 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      вывод с использованием правила 196 (update_opts)
    '('       вывод с использованием правила 196 (update_opts)
    $default  вывод с использованием правила 171 (insert_opts)

    insert_opts  переход в состояние 53
    update_opts  переход в состояние 54


State 10

    0 $accept: query . $end

    $end  сдвиг, и переход в состояние 55


State 11

    2 query: stmt . ';'

    ';'  сдвиг, и переход в состояние 56


State 12

   83 stmt: select_stmt .

    $default  вывод с использованием правила 83 (stmt)


State 13

  155 stmt: delete_stmt .

    $default  вывод с использованием правила 155 (stmt)


State 14

  167 stmt: insert_stmt .

    $default  вывод с использованием правила 167 (stmt)


State 15

  190 stmt: replace_stmt .

    $default  вывод с использованием правила 190 (stmt)


State 16

  194 stmt: update_stmt .

    $default  вывод с использованием правила 194 (stmt)


State 17

  203 stmt: drop_table_stmt .

    $default  вывод с использованием правила 203 (stmt)


State 18

  205 stmt: create_table_stmt .

    $default  вывод с использованием правила 205 (stmt)


State 19

  282 stmt: set_stmt .

    $default  вывод с использованием правила 282 (stmt)


State 20

  213 opt_temporary: TEMPORARY .

    $default  вывод с использованием правила 213 (opt_temporary)


State 21
